[tool.poetry]
name = "fastpythonrobotics_fpr"
version = "0.1.0"
description = "A LLVM compiled python robotics package for real world use."
authors = ["Keith Hall <keithjhall87@gmail.com>"]
license = "BSD 2-Clause"

[tool.poetry.dependencies]
python = "^3.10"
scipy = {version = "^1.10.0", python = "3.10"}
numpy = "^1.23.5"
matplotlib = "^3.6.3"
cvxpy = "^1.3.0"
slycot = "^0.5.3"
control = "^0.9.3"
numba = "^0.56.4"
cupy-cuda11x = "^11.5.0"
coloredlogs = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.4.5"
pytest-xdist = "^3.2.0"
mypy = "^1.0.0"
ruff = "^0.0.244"
pyloot = "^0.1.0"
line-profiler = "^4.0.2"
pyyaml = "^6.0"
lark = "^1.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
